<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/vertical_padding"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    tools:context="sae.infnet.al.edu.av1iagodasilva.activities.personalInfo.PersonalInfoRegisterActivity">

    <LinearLayout
        android:id="@+id/personalinfo_register_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_register_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textCapSentences"
            android:hint="@string/name_register_hint" />

        <EditText
            android:id="@+id/address_register_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textCapSentences"
            android:hint="@string/address_register_hint" />


        <EditText
            android:id="@+id/state_register_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/state_register_hint" />


        <EditText
            android:id="@+id/city_register_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textCapSentences"
            android:hint="@string/city_register_hint" />

        <EditText
            android:id="@+id/phone_register_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="phone"
            android:hint="@string/phone_register_hint" />

        <EditText
            android:id="@+id/email_register_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_register_hint" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/personalinfo_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="executeStep"
            android:text="@string/next_button_text"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

</LinearLayout>
