<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/vertical_padding"
    android:paddingLeft="@dimen/horizontal_padding"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingTop="@dimen/vertical_padding"
    tools:context="sae.infnet.al.edu.av1iagodasilva.activities.personalInfo.PersonalInfoShowActivity">


    <RelativeLayout
        android:id="@+id/name_personalinfo_show_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/name_personalinfo_show_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/person_name" />

        <TextView
            android:id="@+id/name_personalinfo_show_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/name_personalinfo_show_image"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/name_personalinfo_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_personalinfo_show_label"
            android:layout_toRightOf="@id/name_personalinfo_show_image"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/address_personalinfo_show_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_personalinfo_show_group"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/address_personalinfo_show_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/person_address" />

        <TextView
            android:id="@+id/address_personalinfo_show_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/address_personalinfo_show_image"
            android:text="@string/address_label" />

        <TextView
            android:id="@+id/address_personalinfo_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_personalinfo_show_label"
            android:layout_toRightOf="@id/address_personalinfo_show_image"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/state_personalinfo_show_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_personalinfo_show_group"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/state_personalinfo_show_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/person_state" />

        <TextView
            android:id="@+id/state_personalinfo_show_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/state_personalinfo_show_image"
            android:text="@string/state_label" />

        <TextView
            android:id="@+id/state_personalinfo_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/state_personalinfo_show_label"
            android:layout_toRightOf="@id/state_personalinfo_show_image"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/city_personalinfo_show_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/state_personalinfo_show_group"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/city_personalinfo_show_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/person_city" />

        <TextView
            android:id="@+id/city_personalinfo_show_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/city_personalinfo_show_image"
            android:text="@string/city_label" />

        <TextView
            android:id="@+id/city_personalinfo_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_personalinfo_show_label"
            android:layout_toRightOf="@id/city_personalinfo_show_image"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_personalinfo_show_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_personalinfo_show_group"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/phone_personalinfo_show_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/person_phone" />

        <TextView
            android:id="@+id/phone_personalinfo_show_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/phone_personalinfo_show_image"
            android:text="@string/phone_label" />

        <TextView
            android:id="@+id/phone_personalinfo_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_personalinfo_show_label"
            android:layout_toRightOf="@id/phone_personalinfo_show_image"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/email_personalinfo_show_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_personalinfo_show_group"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/email_personalinfo_show_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/person_email" />

        <TextView
            android:id="@+id/email_personalinfo_show_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/email_personalinfo_show_image"
            android:text="@string/email_label" />

        <TextView
            android:id="@+id/email_personalinfo_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_personalinfo_show_label"
            android:layout_toRightOf="@id/email_personalinfo_show_image"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>
